--- a/Refactored_Py_DS_ML_Bootcamp-master/01-Python-Crash-Course/02-Python Crash Course Exercises.ipynb
+++ b/Refactored_Py_DS_ML_Bootcamp-master/01-Python-Crash-Course/02-Python Crash Course Exercises.ipynb
@@ -45,7 +45,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "7**4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,29 +63,31 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = \"Hi there Sam!\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hi', 'there', 'dad!']"
+       "['Hi', 'there', 'Sam!']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "s.split()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,10 +105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "planet = \"Earth\"\n",
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +126,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(f'The diameter of Earth is {diameter} kilometers.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lst = [1,2,[3,4],[5,[100,200,['hello']],23,11],1,7]"
@@ -160,7 +162,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "lst[3][1][2][0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -189,12 +193,14 @@
        "'hello'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "d['k1'][3]['tricky'][3]['target'][3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,16 +233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def domainGet(email_address):\n",
+    "    return email_address.split(\"@\")[1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +252,7 @@
        "'domain.com'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,16 +270,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def findDog(s):\n",
+    "    s = s.lower()\n",
+    "    return \"dog\" in s"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +290,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,14 +308,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def countDog(s):\n",
+    "    s = s.lower() # make all lower case\n",
+    "    s = s.split() # split string into list\n",
+    "    count = list(filter(findDog, s)) # user filter function to get all dogs\n",
+    "    return len(count)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +330,7 @@
        "2"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,9 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "seq = ['soup','dog','salad','cat','great']"
@@ -364,7 +377,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "list(filter(lambda x: x[0] == 's', seq))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -380,19 +395,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def caught_speeding(speed, is_birthday):\n",
+    "    # Reduce speed by 5\n",
+    "    if is_birthday:\n",
+    "        speed -= 5\n",
+    "    # determine ticket type    \n",
+    "    if speed >= 81:\n",
+    "        return \"Big Ticket\"\n",
+    "    elif speed >= 61:\n",
+    "        return \"Small Ticket\"\n",
+    "    else:\n",
+    "        return \"No Ticket\"\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +424,7 @@
        "'Small Ticket'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +444,7 @@
        "'Big Ticket'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
