--- a/Refactored_Py_DS_ML_Bootcamp-master/02-Python-for-Data-Analysis-NumPy/04-Numpy Exercises.ipynb
+++ b/Refactored_Py_DS_ML_Bootcamp-master/02-Python-for-Data-Analysis-NumPy/04-Numpy Exercises.ipynb
@@ -29,11 +29,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,23 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.])"
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.zeros(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,23 +71,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.])"
+       "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.ones(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,23 +98,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 5.,  5.,  5.,  5.,  5.,  5.,  5.,  5.,  5.,  5.])"
+       "array([5, 5, 5, 5, 5, 5, 5, 5, 5, 5])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.full(10, 5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,10 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -138,12 +136,14 @@
        "       44, 45, 46, 47, 48, 49, 50])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.arange(10,51)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,10 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -166,12 +164,14 @@
        "       44, 46, 48, 50])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.arange(10,51,2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,10 +182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -195,12 +193,14 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.arange(9).reshape(3,3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,25 +211,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 46,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.,  0.,  0.],\n",
-       "       [ 0.,  1.,  0.],\n",
-       "       [ 0.,  0.,  1.]])"
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# What is an identify matrix?\n",
+    "np.eye(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,23 +241,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.42829726])"
+       "array([0.24407125])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.random.rand(1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -267,27 +268,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.32031013,  1.6798602 , -0.42985892, -1.53116655,  0.85753232,\n",
-       "        0.87339938,  0.35668636, -1.47491157,  0.15349697,  0.99530727,\n",
-       "       -0.94865451, -1.69174783,  1.57525349, -0.70615234,  0.10991879,\n",
-       "       -0.49478947,  1.08279872,  0.76488333, -2.3039931 ,  0.35401124,\n",
-       "       -0.45454399, -0.64754649, -0.29391671,  0.02339861,  0.38272124])"
+       "array([ 1.32257775, -0.40653615,  0.58505276, -1.48890641, -0.87998645,\n",
+       "        0.65588071, -1.44389748, -0.55767376,  0.3019883 , -0.61416358,\n",
+       "       -0.11489048, -1.11762994, -0.26936593,  0.19378798,  0.65737736,\n",
+       "        1.21693739,  1.32190507,  0.54422917,  0.2335674 ,  0.90865736,\n",
+       "        2.46202606,  0.63251573, -0.93972846,  0.59385181, -1.82869382])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.random.randn(25)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -298,32 +299,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 50,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.01,  0.02,  0.03,  0.04,  0.05,  0.06,  0.07,  0.08,  0.09,  0.1 ],\n",
-       "       [ 0.11,  0.12,  0.13,  0.14,  0.15,  0.16,  0.17,  0.18,  0.19,  0.2 ],\n",
-       "       [ 0.21,  0.22,  0.23,  0.24,  0.25,  0.26,  0.27,  0.28,  0.29,  0.3 ],\n",
-       "       [ 0.31,  0.32,  0.33,  0.34,  0.35,  0.36,  0.37,  0.38,  0.39,  0.4 ],\n",
-       "       [ 0.41,  0.42,  0.43,  0.44,  0.45,  0.46,  0.47,  0.48,  0.49,  0.5 ],\n",
-       "       [ 0.51,  0.52,  0.53,  0.54,  0.55,  0.56,  0.57,  0.58,  0.59,  0.6 ],\n",
-       "       [ 0.61,  0.62,  0.63,  0.64,  0.65,  0.66,  0.67,  0.68,  0.69,  0.7 ],\n",
-       "       [ 0.71,  0.72,  0.73,  0.74,  0.75,  0.76,  0.77,  0.78,  0.79,  0.8 ],\n",
-       "       [ 0.81,  0.82,  0.83,  0.84,  0.85,  0.86,  0.87,  0.88,  0.89,  0.9 ],\n",
-       "       [ 0.91,  0.92,  0.93,  0.94,  0.95,  0.96,  0.97,  0.98,  0.99,  1.  ]])"
+       "array([[0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1 ],\n",
+       "       [0.11, 0.12, 0.13, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.2 ],\n",
+       "       [0.21, 0.22, 0.23, 0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.3 ],\n",
+       "       [0.31, 0.32, 0.33, 0.34, 0.35, 0.36, 0.37, 0.38, 0.39, 0.4 ],\n",
+       "       [0.41, 0.42, 0.43, 0.44, 0.45, 0.46, 0.47, 0.48, 0.49, 0.5 ],\n",
+       "       [0.51, 0.52, 0.53, 0.54, 0.55, 0.56, 0.57, 0.58, 0.59, 0.6 ],\n",
+       "       [0.61, 0.62, 0.63, 0.64, 0.65, 0.66, 0.67, 0.68, 0.69, 0.7 ],\n",
+       "       [0.71, 0.72, 0.73, 0.74, 0.75, 0.76, 0.77, 0.78, 0.79, 0.8 ],\n",
+       "       [0.81, 0.82, 0.83, 0.84, 0.85, 0.86, 0.87, 0.88, 0.89, 0.9 ],\n",
+       "       [0.91, 0.92, 0.93, 0.94, 0.95, 0.96, 0.97, 0.98, 0.99, 1.  ]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.linspace(0.01,1,100).reshape(10,10) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -334,26 +335,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.        ,  0.05263158,  0.10526316,  0.15789474,  0.21052632,\n",
-       "        0.26315789,  0.31578947,  0.36842105,  0.42105263,  0.47368421,\n",
-       "        0.52631579,  0.57894737,  0.63157895,  0.68421053,  0.73684211,\n",
-       "        0.78947368,  0.84210526,  0.89473684,  0.94736842,  1.        ])"
+       "array([0.        , 0.05263158, 0.10526316, 0.15789474, 0.21052632,\n",
+       "       0.26315789, 0.31578947, 0.36842105, 0.42105263, 0.47368421,\n",
+       "       0.52631579, 0.57894737, 0.63157895, 0.68421053, 0.73684211,\n",
+       "       0.78947368, 0.84210526, 0.89473684, 0.94736842, 1.        ])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.linspace(0,1,20)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -366,10 +367,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -381,7 +380,7 @@
        "       [21, 22, 23, 24, 25]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,10 +405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -419,12 +416,14 @@
        "       [22, 23, 24, 25]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "mat[2:,1:]"
+   ]
   },
   {
    "cell_type": "code",
@@ -441,10 +440,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 51,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -452,12 +449,14 @@
        "20"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "mat[3,-1]"
+   ]
   },
   {
    "cell_type": "code",
@@ -474,10 +473,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -487,19 +484,19 @@
        "       [12]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "mat[0:3,1:2]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# WRITE CODE HERE THAT REPRODUCES THE OUTPUT OF THE CELL BELOW\n",
@@ -509,10 +506,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -520,12 +515,14 @@
        "array([21, 22, 23, 24, 25])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "mat[4,:]"
+   ]
   },
   {
    "cell_type": "code",
@@ -542,10 +539,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -554,12 +549,14 @@
        "       [21, 22, 23, 24, 25]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "mat[3:]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -577,10 +574,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -588,12 +583,14 @@
        "325"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.sum(mat)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -604,23 +601,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.2111025509279782"
+       "7.211102550927978"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.std(mat)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -631,10 +628,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -642,12 +637,14 @@
        "array([55, 60, 65, 70, 75])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.sum(mat, axis=0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -675,9 +672,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
