--- a/Refactored_Py_DS_ML_Bootcamp-master/04-Pandas-Exercises/01-SF Salaries Exercise.ipynb
+++ b/Refactored_Py_DS_ML_Bootcamp-master/04-Pandas-Exercises/01-SF Salaries Exercise.ipynb
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv(\"Salaries.csv\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,15 +60,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -196,12 +207,14 @@
        "4  2011    NaN  San Francisco     NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,10 +225,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -224,25 +235,29 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 148654 entries, 0 to 148653\n",
       "Data columns (total 13 columns):\n",
-      "Id                  148654 non-null int64\n",
-      "EmployeeName        148654 non-null object\n",
-      "JobTitle            148654 non-null object\n",
-      "BasePay             148045 non-null float64\n",
-      "OvertimePay         148650 non-null float64\n",
-      "OtherPay            148650 non-null float64\n",
-      "Benefits            112491 non-null float64\n",
-      "TotalPay            148654 non-null float64\n",
-      "TotalPayBenefits    148654 non-null float64\n",
-      "Year                148654 non-null int64\n",
-      "Notes               0 non-null float64\n",
-      "Agency              148654 non-null object\n",
-      "Status              0 non-null float64\n",
+      " #   Column            Non-Null Count   Dtype  \n",
+      "---  ------            --------------   -----  \n",
+      " 0   Id                148654 non-null  int64  \n",
+      " 1   EmployeeName      148654 non-null  object \n",
+      " 2   JobTitle          148654 non-null  object \n",
+      " 3   BasePay           148045 non-null  float64\n",
+      " 4   OvertimePay       148650 non-null  float64\n",
+      " 5   OtherPay          148650 non-null  float64\n",
+      " 6   Benefits          112491 non-null  float64\n",
+      " 7   TotalPay          148654 non-null  float64\n",
+      " 8   TotalPayBenefits  148654 non-null  float64\n",
+      " 9   Year              148654 non-null  int64  \n",
+      " 10  Notes             0 non-null       float64\n",
+      " 11  Agency            148654 non-null  object \n",
+      " 12  Status            0 non-null       float64\n",
       "dtypes: float64(8), int64(2), object(3)\n",
       "memory usage: 14.7+ MB\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,10 +268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -264,12 +277,14 @@
        "66325.44884050643"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['BasePay'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -280,10 +295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -291,12 +304,14 @@
        "245131.88"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['OvertimePay'].max()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -307,10 +322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -319,12 +332,15 @@
        "Name: JobTitle, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "mask = df['EmployeeName'] == 'JOSEPH DRISCOLL'\n",
+    "df.loc[mask, 'JobTitle']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,10 +351,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -347,12 +361,14 @@
        "Name: TotalPayBenefits, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.loc[mask, 'TotalPayBenefits']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -363,15 +379,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -423,12 +450,15 @@
        "0  2011    NaN  San Francisco     NaN  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "id_of_max = df['TotalPayBenefits'].idxmax()\n",
+    "df[df.index == id_of_max]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -439,15 +469,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -499,12 +540,15 @@
        "148653  San Francisco     NaN  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "index_min = df['TotalPayBenefits'].idxmin()\n",
+    "df[df.index == index_min]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -515,28 +559,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BasePay</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2011</th>\n",
+       "      <td>63595.956517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012</th>\n",
+       "      <td>65436.406857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013</th>\n",
+       "      <td>69630.030216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014</th>\n",
+       "      <td>66564.421924</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Year\n",
-       "2011    63595.956517\n",
-       "2012    65436.406857\n",
-       "2013    69630.030216\n",
-       "2014    66564.421924\n",
-       "Name: BasePay, dtype: float64"
+       "           BasePay\n",
+       "Year              \n",
+       "2011  63595.956517\n",
+       "2012  65436.406857\n",
+       "2013  69630.030216\n",
+       "2014  66564.421924"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[['BasePay', 'Year']].groupby(by='Year').mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -547,10 +638,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -558,12 +647,14 @@
        "2159"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['JobTitle'].value_counts().size"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -574,10 +665,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -590,12 +679,14 @@
        "Name: JobTitle, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['JobTitle'].value_counts().head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -606,10 +697,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -617,12 +706,16 @@
        "202"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "mask = df['Year'] == 2013\n",
+    "mask = df.loc[mask, 'JobTitle'].value_counts() == 1\n",
+    "mask.sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -633,19 +726,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "423"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['JobTitle'].str.contains('Chief', case=True).sum()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -669,19 +771,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title_len</th>\n",
+       "      <th>TotalPayBenefits</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>title_len</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.036878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TotalPayBenefits</th>\n",
+       "      <td>-0.036878</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  title_len  TotalPayBenefits\n",
+       "title_len          1.000000         -0.036878\n",
+       "TotalPayBenefits  -0.036878          1.000000"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['title_len'] = df['JobTitle'].str.len()\n",
+    "df[['title_len', 'TotalPayBenefits']].corr()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -747,9 +899,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
