finished first exercise

--- a/Refactored_Py_DS_ML_Bootcamp-master/04-Pandas-Exercises/01-SF Salaries Exercise.ipynb
+++ b/Refactored_Py_DS_ML_Bootcamp-master/04-Pandas-Exercises/01-SF Salaries Exercise.ipynb
@@ -379,78 +379,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>EmployeeName</th>\n",
-       "      <th>JobTitle</th>\n",
-       "      <th>BasePay</th>\n",
-       "      <th>OvertimePay</th>\n",
-       "      <th>OtherPay</th>\n",
-       "      <th>Benefits</th>\n",
-       "      <th>TotalPay</th>\n",
-       "      <th>TotalPayBenefits</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Notes</th>\n",
-       "      <th>Agency</th>\n",
-       "      <th>Status</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>NATHANIEL FORD</td>\n",
-       "      <td>GENERAL MANAGER-METROPOLITAN TRANSIT AUTHORITY</td>\n",
-       "      <td>167411.18</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>400184.25</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>567595.43</td>\n",
-       "      <td>567595.43</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Id    EmployeeName                                        JobTitle  \\\n",
-       "0   1  NATHANIEL FORD  GENERAL MANAGER-METROPOLITAN TRANSIT AUTHORITY   \n",
-       "\n",
-       "     BasePay  OvertimePay   OtherPay  Benefits   TotalPay  TotalPayBenefits  \\\n",
-       "0  167411.18          0.0  400184.25       NaN  567595.43         567595.43   \n",
-       "\n",
-       "   Year  Notes         Agency  Status  \n",
-       "0  2011    NaN  San Francisco     NaN  "
+       "0    NATHANIEL FORD\n",
+       "Name: EmployeeName, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -506,6 +445,7 @@
        "      <th>Notes</th>\n",
        "      <th>Agency</th>\n",
        "      <th>Status</th>\n",
+       "      <th>title_len</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -524,6 +464,7 @@
        "      <td>NaN</td>\n",
        "      <td>San Francisco</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -536,11 +477,11 @@
        "        OtherPay  Benefits  TotalPay  TotalPayBenefits  Year  Notes  \\\n",
        "148653   -618.13       0.0   -618.13           -618.13  2014    NaN   \n",
        "\n",
-       "               Agency  Status  \n",
-       "148653  San Francisco     NaN  "
+       "               Agency  Status  title_len  \n",
+       "148653  San Francisco     NaN         26  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,74 +500,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>BasePay</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Year</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2011</th>\n",
-       "      <td>63595.956517</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012</th>\n",
-       "      <td>65436.406857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013</th>\n",
-       "      <td>69630.030216</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014</th>\n",
-       "      <td>66564.421924</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           BasePay\n",
-       "Year              \n",
-       "2011  63595.956517\n",
-       "2012  65436.406857\n",
-       "2013  69630.030216\n",
-       "2014  66564.421924"
+       "Year\n",
+       "2011    63595.956517\n",
+       "2012    65436.406857\n",
+       "2013    69630.030216\n",
+       "2014    66564.421924\n",
+       "Name: BasePay, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[['BasePay', 'Year']].groupby(by='Year').mean()"
+    "# %timeit df[['BasePay', 'Year']].groupby(by='Year').mean() # my original (5.87 ms)\n",
+    "df.groupby('Year')['BasePay'].mean() # my revised (3.27 ms)\n",
+    "# %timeit df.groupby('Year').mean()['BasePay'] # the instructors (18.3 ms)"
    ]
   },
   {
@@ -638,22 +534,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2159"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.5 ms ± 252 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "13.2 ms ± 92.7 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
     }
    ],
    "source": [
-    "df['JobTitle'].value_counts().size"
+    "%timeit df['JobTitle'].value_counts().size # mine (13.5ms)\n",
+    "%timeit df['JobTitle'].nunique() # instructos (easier and faster 13.2 ms)"
    ]
   },
   {
@@ -697,24 +592,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "202"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.65 ms ± 78.2 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
     }
    ],
    "source": [
     "mask = df['Year'] == 2013\n",
     "mask = df.loc[mask, 'JobTitle'].value_counts() == 1\n",
-    "mask.sum()"
+    "mask.sum()\n",
+    "\n",
+    "#%timeit sum(df[df['Year'] ==2013]['JobTitle'].value_counts() ==1)\n",
+    "#%timeit (df[df['Year'] ==2013]['JobTitle'].value_counts() ==1).sum()"
    ]
   },
   {
@@ -726,22 +621,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "423"
+       "627"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['JobTitle'].str.contains('Chief', case=True).sum()"
+    "df['JobTitle'].str.contains('chief', case=False).sum()"
    ]
   },
   {
